@@ -46,16 +46,18 @@ public class DefaultMonitor implements IMonitor {
 				String sourceName = processContext.getCurrentSource() != null ? processContext.getCurrentSource().getName() : "NO-SOURCE";
 				Runtime rt = Runtime.getRuntime();
 				logInfo("Processing: " 
-						+ processContext.getRecordsCount() 
-						+ " records from " + sourceName 
-						+ " (" +  (processContext.getRecordsCount() - lastRecordsCount) + " processed now, "
-						+ processContext.getSkippedCount() + " skipped, " 
-						+ processContext.getInvalidCount() + " invalid, "
-						+ "Java Heap: " + rt.totalMemory() / 1024 / 1024 + "MB total, " + rt.freeMemory() / 1024 / 1024 + "MB free)");
+						+ processContext.getRecordsCount() + "/"
+						+ (processContext.getRecordsCount() - lastRecordsCount) + "/"
+						+ processContext.getSkippedCount() + "/" 
+						+ processContext.getInvalidCount() 
+						+ " (total/now/skipped/invalid) records from " + sourceName + ", "
+						+ "Java Heap: " + rt.totalMemory() / 1024 / 1024 + "MB/" + rt.freeMemory() / 1024 / 1024 + "MB (total/free)");
 				lastRecordsCount = processContext.getRecordsCount();
+				/*
 				if (rt.freeMemory() < 16 * 1024 * 1024) {
-					//logInfo("Low free memory < 16MB");
+					logInfo("Low free memory < 16MB");
 				}
+				*/
 			}
 		}
 		
