@@ -1,6 +1,10 @@
 Change Notes
 =============
 
+2009-07-15 jbornema
+	- Little restructure in LDBCLoader
+	- DefaultMonitor logging adjusted
+
 2009-07-06 jbornema
 	- Added Java Heap statistics in DefaultMonitor when logging record status every 30 sec.
 	- DataPoolInitializer: added "context" variable to verify(IDataPool) method
